<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SplashActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:id="@+id/splash_screen">

    <ImageView
        android:id="@+id/logo_splash"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/logo_splash_screen"
        android:scaleType="centerCrop"
        android:src="@drawable/nearby_food" />

    <TextView
        android:id="@+id/title_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nearbyfoods"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temukan_lokasi_makan_di_tempat_anda"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:textStyle="normal" />
</LinearLayout>